parser.output
Terminals unused in grammar

   FUNC_NAME
   ENUMERATION_CONSTANT
   BACKSLASH
   INCLUDE
   DEFINE
   CHARACTER
   SEPARATOR


State 27 conflicts: 1 shift/reduce
State 450 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: ID
    2                   | CONSTANT
    3                   | STRING
    4                   | LPARENTHESIS expression RPARENTHESIS
    5                   | generic_selection

    6 generic_selection: GENERIC LPARENTHESIS assignment_expression COMMA generic_assoc_list RPARENTHESIS

    7 generic_assoc_list: generic_association
    8                   | generic_assoc_list COMMA generic_association

    9 generic_association: type_name COLON assignment_expression
   10                    | DEFAULT COLON assignment_expression

   11 postfix_expression: primary_expression
   12                   | postfix_expression LBRACE expression RBRACE
   13                   | postfix_expression LPARENTHESIS RPARENTHESIS
   14                   | postfix_expression LPARENTHESIS argument_expression_list RPARENTHESIS
   15                   | postfix_expression DOT ID
   16                   | postfix_expression PTR_OP ID
   17                   | postfix_expression INC_OP
   18                   | postfix_expression DEC_OP
   19                   | LPARENTHESIS type_name RPARENTHESIS LBRACKET initializer_list RBRACKET
   20                   | LPARENTHESIS type_name RPARENTHESIS LBRACKET initializer_list COMMA RBRACKET

   21 argument_expression_list: assignment_expression
   22                         | argument_expression_list COMMA assignment_expression

   23 unary_expression: postfix_expression
   24                 | INC_OP unary_expression
   25                 | DEC_OP unary_expression
   26                 | unary_operator cast_expression
   27                 | SIZEOF unary_expression
   28                 | SIZEOF LPARENTHESIS type_name RPARENTHESIS
   29                 | ALIGNOF LPARENTHESIS type_name RPARENTHESIS

   30 unary_operator: AMPERSAND
   31               | STAR
   32               | PLUS
   33               | MINUS
   34               | TILDE
   35               | EXCLAMATION

   36 cast_expression: unary_expression
   37                | LPARENTHESIS type_name RPARENTHESIS cast_expression

   38 multiplicative_expression: cast_expression
   39                          | multiplicative_expression STAR cast_expression
   40                          | multiplicative_expression SLASH cast_expression
   41                          | multiplicative_expression MODULO cast_expression

   42 additive_expression: multiplicative_expression
   43                    | additive_expression PLUS multiplicative_expression
   44                    | additive_expression MINUS multiplicative_expression

   45 shift_expression: additive_expression
   46                 | shift_expression SHL additive_expression
   47                 | shift_expression SHR additive_expression

   48 relational_expression: shift_expression
   49                      | relational_expression LESS_THAN shift_expression
   50                      | relational_expression GREATER_THAN shift_expression
   51                      | relational_expression LE_OP shift_expression
   52                      | relational_expression GE_OP shift_expression

   53 equality_expression: relational_expression
   54                    | equality_expression EQ_OP relational_expression
   55                    | equality_expression NE_OP relational_expression

   56 and_expression: equality_expression
   57               | and_expression AMPERSAND equality_expression

   58 exclusive_or_expression: and_expression
   59                        | exclusive_or_expression CARET and_expression

   60 inclusive_or_expression: exclusive_or_expression
   61                        | inclusive_or_expression PIPE exclusive_or_expression

   62 logical_and_expression: inclusive_or_expression
   63                       | logical_and_expression AND_OP inclusive_or_expression

   64 logical_or_expression: logical_and_expression
   65                      | logical_or_expression OR_OP logical_and_expression

   66 conditional_expression: logical_or_expression
   67                       | logical_or_expression QUESTION_MARK expression COLON conditional_expression

   68 assignment_expression: conditional_expression
   69                      | unary_expression assignment_operator assignment_expression

   70 assignment_operator: EQUALS
   71                    | MUL_ASSIGN
   72                    | DIV_ASSIGN
   73                    | MOD_ASSIGN
   74                    | ADD_ASSIGN
   75                    | SUB_ASSIGN
   76                    | LEFT_ASSIGN
   77                    | RIGHT_ASSIGN
   78                    | AND_ASSIGN
   79                    | XOR_ASSIGN
   80                    | OR_ASSIGN

   81 expression: assignment_expression
   82           | expression COMMA assignment_expression

   83 constant_expression: conditional_expression

   84 declaration: declaration_specifiers SEMICOLON
   85            | declaration_specifiers init_declarator_list SEMICOLON
   86            | static_assert_declaration

   87 declaration_specifiers: storage_class_specifier declaration_specifiers
   88                       | storage_class_specifier
   89                       | type_specifier declaration_specifiers
   90                       | type_specifier
   91                       | type_qualifier declaration_specifiers
   92                       | type_qualifier
   93                       | function_specifier declaration_specifiers
   94                       | function_specifier
   95                       | alignment_specifier declaration_specifiers
   96                       | alignment_specifier

   97 init_declarator_list: init_declarator
   98                     | init_declarator_list COMMA init_declarator

   99 init_declarator: declarator EQUALS initializer
  100                | declarator

  101 storage_class_specifier: TYPEDEF
  102                        | EXTERN
  103                        | STATIC
  104                        | THREAD_LOCAL
  105                        | AUTO
  106                        | REGISTER

  107 type_specifier: VOID
  108               | CHAR
  109               | SHORT
  110               | INT
  111               | LONG
  112               | FLOAT
  113               | DOUBLE
  114               | SIGNED
  115               | UNSIGNED
  116               | BOOL
  117               | COMPLEX
  118               | IMAGINARY
  119               | atomic_type_specifier
  120               | struct_or_union_specifier
  121               | enum_specifier
  122               | TYPEDEF_NAME

  123 struct_or_union_specifier: struct_or_union LBRACKET struct_declaration_list RBRACKET
  124                          | struct_or_union ID LBRACKET struct_declaration_list RBRACKET
  125                          | struct_or_union ID

  126 struct_or_union: STRUCT
  127                | UNION

  128 struct_declaration_list: struct_declaration
  129                        | struct_declaration_list struct_declaration

  130 struct_declaration: specifier_qualifier_list SEMICOLON
  131                   | specifier_qualifier_list struct_declarator_list SEMICOLON
  132                   | static_assert_declaration

  133 specifier_qualifier_list: type_specifier specifier_qualifier_list
  134                         | type_specifier
  135                         | type_qualifier specifier_qualifier_list
  136                         | type_qualifier

  137 struct_declarator_list: struct_declarator
  138                       | struct_declarator_list COMMA struct_declarator

  139 struct_declarator: COLON constant_expression
  140                  | declarator COLON constant_expression
  141                  | declarator

  142 enum_specifier: ENUM LBRACKET enumerator_list RBRACKET
  143               | ENUM LBRACKET enumerator_list COMMA RBRACKET
  144               | ENUM ID LBRACKET enumerator_list RBRACKET
  145               | ENUM ID LBRACKET enumerator_list COMMA RBRACKET
  146               | ENUM ID

  147 enumerator_list: enumerator
  148                | enumerator_list COMMA enumerator

  149 enumerator: ID
  150           | ID EQUALS CONSTANT

  151 atomic_type_specifier: ATOMIC LPARENTHESIS type_name RPARENTHESIS

  152 type_qualifier: CONST
  153               | RESTRICT
  154               | VOLATILE
  155               | ATOMIC

  156 function_specifier: INLINE
  157                   | NORETURN

  158 alignment_specifier: ALIGNAS LPARENTHESIS type_name RPARENTHESIS
  159                    | ALIGNAS LPARENTHESIS constant_expression RPARENTHESIS

  160 declarator: pointer direct_declarator
  161           | direct_declarator

  162 direct_declarator: ID
  163                  | LPARENTHESIS declarator RPARENTHESIS
  164                  | direct_declarator LBRACE RBRACE
  165                  | direct_declarator LBRACE STAR RBRACE
  166                  | direct_declarator LBRACE STATIC type_qualifier_list assignment_expression RBRACE
  167                  | direct_declarator LBRACE STATIC assignment_expression RBRACE
  168                  | direct_declarator LBRACE type_qualifier_list STAR RBRACE
  169                  | direct_declarator LBRACE type_qualifier_list STATIC assignment_expression RBRACE
  170                  | direct_declarator LBRACE type_qualifier_list assignment_expression RBRACE
  171                  | direct_declarator LBRACE type_qualifier_list RBRACE
  172                  | direct_declarator LBRACE assignment_expression RBRACE
  173                  | direct_declarator LPARENTHESIS parameter_type_list RPARENTHESIS
  174                  | direct_declarator LPARENTHESIS RPARENTHESIS
  175                  | direct_declarator LPARENTHESIS ID_list RPARENTHESIS

  176 pointer: STAR type_qualifier_list pointer
  177        | STAR type_qualifier_list
  178        | STAR pointer
  179        | STAR

  180 type_qualifier_list: type_qualifier
  181                    | type_qualifier_list type_qualifier

  182 parameter_type_list: parameter_list COMMA ELLIPSIS
  183                    | parameter_list

  184 parameter_list: parameter_declaration
  185               | parameter_list COMMA parameter_declaration

  186 parameter_declaration: declaration_specifiers declarator
  187                      | declaration_specifiers abstract_declarator
  188                      | declaration_specifiers

  189 ID_list: ID
  190        | ID_list COMMA ID

  191 type_name: specifier_qualifier_list abstract_declarator
  192          | specifier_qualifier_list

  193 abstract_declarator: pointer direct_abstract_declarator
  194                    | pointer
  195                    | direct_abstract_declarator

  196 direct_abstract_declarator: LPARENTHESIS abstract_declarator RPARENTHESIS
  197                           | LBRACE RBRACE
  198                           | LBRACE STAR RBRACE
  199                           | LBRACE STATIC type_qualifier_list assignment_expression RBRACE
  200                           | LBRACE STATIC assignment_expression RBRACE
  201                           | LBRACE type_qualifier_list STATIC assignment_expression RBRACE
  202                           | LBRACE type_qualifier_list assignment_expression RBRACE
  203                           | LBRACE type_qualifier_list RBRACE
  204                           | LBRACE assignment_expression RBRACE
  205                           | direct_abstract_declarator LBRACE RBRACE
  206                           | direct_abstract_declarator LBRACE STAR RBRACE
  207                           | direct_abstract_declarator LBRACE STATIC type_qualifier_list assignment_expression RBRACE
  208                           | direct_abstract_declarator LBRACE STATIC assignment_expression RBRACE
  209                           | direct_abstract_declarator LBRACE type_qualifier_list assignment_expression RBRACE
  210                           | direct_abstract_declarator LBRACE type_qualifier_list STATIC assignment_expression RBRACE
  211                           | direct_abstract_declarator LBRACE type_qualifier_list RBRACE
  212                           | direct_abstract_declarator LBRACE assignment_expression RBRACE
  213                           | LPARENTHESIS RPARENTHESIS
  214                           | LPARENTHESIS parameter_type_list RPARENTHESIS
  215                           | direct_abstract_declarator LPARENTHESIS RPARENTHESIS
  216                           | direct_abstract_declarator LPARENTHESIS parameter_type_list RPARENTHESIS

  217 initializer: LBRACKET initializer_list RBRACKET
  218            | LBRACKET initializer_list COMMA RBRACKET
  219            | assignment_expression

  220 initializer_list: designation initializer
  221                 | initializer
  222                 | initializer_list COMMA designation initializer
  223                 | initializer_list COMMA initializer

  224 designation: designator_list EQUALS

  225 designator_list: designator
  226                | designator_list designator

  227 designator: LBRACE constant_expression RBRACE
  228           | DOT ID

  229 static_assert_declaration: STATIC_ASSERT LPARENTHESIS constant_expression COMMA STRING RPARENTHESIS SEMICOLON

  230 statement: labeled_statement
  231          | compound_statement
  232          | expression_statement
  233          | selection_statement
  234          | iteration_statement
  235          | jump_statement

  236 labeled_statement: ID COLON statement
  237                  | CASE constant_expression COLON statement
  238                  | DEFAULT COLON statement

  239 compound_statement: LBRACKET RBRACKET
  240                   | LBRACKET block_item_list RBRACKET

  241 block_item_list: block_item
  242                | block_item_list block_item

  243 block_item: declaration
  244           | statement

  245 expression_statement: SEMICOLON
  246                     | expression SEMICOLON

  247 selection_statement: IF LPARENTHESIS expression RPARENTHESIS statement ELSE statement
  248                    | IF LPARENTHESIS expression RPARENTHESIS statement
  249                    | SWITCH LPARENTHESIS expression RPARENTHESIS statement

  250 iteration_statement: WHILE LPARENTHESIS expression RPARENTHESIS statement
  251                    | DO statement WHILE LPARENTHESIS expression RPARENTHESIS SEMICOLON
  252                    | FOR LPARENTHESIS expression_statement expression_statement RPARENTHESIS statement
  253                    | FOR LPARENTHESIS expression_statement expression_statement expression RPARENTHESIS statement
  254                    | FOR LPARENTHESIS declaration expression_statement RPARENTHESIS statement
  255                    | FOR LPARENTHESIS declaration expression_statement expression RPARENTHESIS statement

  256 jump_statement: GOTO ID SEMICOLON
  257               | CONTINUE SEMICOLON
  258               | BREAK SEMICOLON
  259               | RETURN SEMICOLON
  260               | RETURN expression SEMICOLON

  261 translation_unit: external_declaration
  262                 | translation_unit external_declaration

  263 external_declaration: function_definition
  264                     | declaration

  265 function_definition: declaration_specifiers declarator declaration_list compound_statement
  266                    | declaration_specifiers declarator compound_statement

  267 declaration_list: declaration
  268                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 1 15 16 124 125 144 145 146 149 150 162 189 190 228 236 256
CONSTANT (259) 2 150
STRING (260) 3 229
FUNC_NAME (261)
SIZEOF (262) 27 28
PTR_OP (263) 16
INC_OP (264) 17 24
DEC_OP (265) 18 25
SHL (266) 46
SHR (267) 47
LE_OP (268) 51
GE_OP (269) 52
EQ_OP (270) 54
NE_OP (271) 55
AND_OP (272) 63
OR_OP (273) 65
MUL_ASSIGN (274) 71
DIV_ASSIGN (275) 72
MOD_ASSIGN (276) 73
ADD_ASSIGN (277) 74
SUB_ASSIGN (278) 75
LEFT_ASSIGN (279) 76
RIGHT_ASSIGN (280) 77
AND_ASSIGN (281) 78
XOR_ASSIGN (282) 79
OR_ASSIGN (283) 80
TYPEDEF_NAME (284) 122
ENUMERATION_CONSTANT (285)
TYPEDEF (286) 101
EXTERN (287) 102
STATIC (288) 103 166 167 169 199 200 201 207 208 210
AUTO (289) 105
REGISTER (290) 106
INLINE (291) 156
CONST (292) 152
RESTRICT (293) 153
VOLATILE (294) 154
BOOL (295) 116
CHAR (296) 108
SHORT (297) 109
INT (298) 110
LONG (299) 111
SIGNED (300) 114
UNSIGNED (301) 115
FLOAT (302) 112
DOUBLE (303) 113
VOID (304) 107
COMPLEX (305) 117
IMAGINARY (306) 118
STRUCT (307) 126
UNION (308) 127
ENUM (309) 142 143 144 145 146
ELLIPSIS (310) 182
CASE (311) 237
DEFAULT (312) 10 238
IF (313) 247 248
ELSE (314) 247
SWITCH (315) 249
WHILE (316) 250 251
DO (317) 251
FOR (318) 252 253 254 255
GOTO (319) 256
CONTINUE (320) 257
BREAK (321) 258
RETURN (322) 259 260
ALIGNAS (323) 158 159
ALIGNOF (324) 29
ATOMIC (325) 151 155
GENERIC (326) 6
NORETURN (327) 157
STATIC_ASSERT (328) 229
THREAD_LOCAL (329) 104
SEMICOLON (330) 84 85 130 131 229 245 246 251 256 257 258 259 260
LPARENTHESIS (331) 4 6 13 14 19 20 28 29 37 151 158 159 163 173 174
    175 196 213 214 215 216 229 247 248 249 250 251 252 253 254 255
RPARENTHESIS (332) 4 6 13 14 19 20 28 29 37 151 158 159 163 173 174
    175 196 213 214 215 216 229 247 248 249 250 251 252 253 254 255
LBRACE (333) 12 164 165 166 167 168 169 170 171 172 197 198 199 200
    201 202 203 204 205 206 207 208 209 210 211 212 227
RBRACE (334) 12 164 165 166 167 168 169 170 171 172 197 198 199 200
    201 202 203 204 205 206 207 208 209 210 211 212 227
COMMA (335) 6 8 20 22 82 98 138 143 145 148 182 185 190 218 222 223
    229
COLON (336) 9 10 67 139 140 236 237 238
EQUALS (337) 70 99 150 224
LBRACKET (338) 19 20 123 124 142 143 144 145 217 218 239 240
RBRACKET (339) 19 20 123 124 142 143 144 145 217 218 239 240
DOT (340) 15 228
AMPERSAND (341) 30 57
EXCLAMATION (342) 35
MINUS (343) 33 44
PLUS (344) 32 43
TILDE (345) 34
STAR (346) 31 39 165 168 176 177 178 179 198 206
SLASH (347) 40
BACKSLASH (348)
MODULO (349) 41
LESS_THAN (350) 49
GREATER_THAN (351) 50
CARET (352) 59
PIPE (353) 61
QUESTION_MARK (354) 67
INCLUDE (355)
DEFINE (356)
CHARACTER (357)
SEPARATOR (358)


Nonterminals, with rules where they appear

$accept (104)
    on left: 0
primary_expression (105)
    on left: 1 2 3 4 5, on right: 11
generic_selection (106)
    on left: 6, on right: 5
generic_assoc_list (107)
    on left: 7 8, on right: 6 8
generic_association (108)
    on left: 9 10, on right: 7 8
postfix_expression (109)
    on left: 11 12 13 14 15 16 17 18 19 20, on right: 12 13 14 15 16
    17 18 23
argument_expression_list (110)
    on left: 21 22, on right: 14 22
unary_expression (111)
    on left: 23 24 25 26 27 28 29, on right: 24 25 27 36 69
unary_operator (112)
    on left: 30 31 32 33 34 35, on right: 26
cast_expression (113)
    on left: 36 37, on right: 26 37 38 39 40 41
multiplicative_expression (114)
    on left: 38 39 40 41, on right: 39 40 41 42 43 44
additive_expression (115)
    on left: 42 43 44, on right: 43 44 45 46 47
shift_expression (116)
    on left: 45 46 47, on right: 46 47 48 49 50 51 52
relational_expression (117)
    on left: 48 49 50 51 52, on right: 49 50 51 52 53 54 55
equality_expression (118)
    on left: 53 54 55, on right: 54 55 56 57
and_expression (119)
    on left: 56 57, on right: 57 58 59
exclusive_or_expression (120)
    on left: 58 59, on right: 59 60 61
inclusive_or_expression (121)
    on left: 60 61, on right: 61 62 63
logical_and_expression (122)
    on left: 62 63, on right: 63 64 65
logical_or_expression (123)
    on left: 64 65, on right: 65 66 67
conditional_expression (124)
    on left: 66 67, on right: 67 68 83
assignment_expression (125)
    on left: 68 69, on right: 6 9 10 21 22 69 81 82 166 167 169 170
    172 199 200 201 202 204 207 208 209 210 212 219
assignment_operator (126)
    on left: 70 71 72 73 74 75 76 77 78 79 80, on right: 69
expression (127)
    on left: 81 82, on right: 4 12 67 82 246 247 248 249 250 251 253
    255 260
constant_expression (128)
    on left: 83, on right: 139 140 159 227 229 237
declaration (129)
    on left: 84 85 86, on right: 243 254 255 264 267 268
declaration_specifiers (130)
    on left: 87 88 89 90 91 92 93 94 95 96, on right: 84 85 87 89 91
    93 95 186 187 188 265 266
init_declarator_list (131)
    on left: 97 98, on right: 85 98
init_declarator (132)
    on left: 99 100, on right: 97 98
storage_class_specifier (133)
    on left: 101 102 103 104 105 106, on right: 87 88
type_specifier (134)
    on left: 107 108 109 110 111 112 113 114 115 116 117 118 119 120
    121 122, on right: 89 90 133 134
struct_or_union_specifier (135)
    on left: 123 124 125, on right: 120
struct_or_union (136)
    on left: 126 127, on right: 123 124 125
struct_declaration_list (137)
    on left: 128 129, on right: 123 124 129
struct_declaration (138)
    on left: 130 131 132, on right: 128 129
specifier_qualifier_list (139)
    on left: 133 134 135 136, on right: 130 131 133 135 191 192
struct_declarator_list (140)
    on left: 137 138, on right: 131 138
struct_declarator (141)
    on left: 139 140 141, on right: 137 138
enum_specifier (142)
    on left: 142 143 144 145 146, on right: 121
enumerator_list (143)
    on left: 147 148, on right: 142 143 144 145 148
enumerator (144)
    on left: 149 150, on right: 147 148
atomic_type_specifier (145)
    on left: 151, on right: 119
type_qualifier (146)
    on left: 152 153 154 155, on right: 91 92 135 136 180 181
function_specifier (147)
    on left: 156 157, on right: 93 94
alignment_specifier (148)
    on left: 158 159, on right: 95 96
declarator (149)
    on left: 160 161, on right: 99 100 140 141 163 186 265 266
direct_declarator (150)
    on left: 162 163 164 165 166 167 168 169 170 171 172 173 174 175,
    on right: 160 161 164 165 166 167 168 169 170 171 172 173 174 175
pointer (151)
    on left: 176 177 178 179, on right: 160 176 178 193 194
type_qualifier_list (152)
    on left: 180 181, on right: 166 168 169 170 171 176 177 181 199
    201 202 203 207 209 210 211
parameter_type_list (153)
    on left: 182 183, on right: 173 214 216
parameter_list (154)
    on left: 184 185, on right: 182 183 185
parameter_declaration (155)
    on left: 186 187 188, on right: 184 185
ID_list (156)
    on left: 189 190, on right: 175 190
type_name (157)
    on left: 191 192, on right: 9 19 20 28 29 37 151 158
abstract_declarator (158)
    on left: 193 194 195, on right: 187 191 196
direct_abstract_declarator (159)
    on left: 196 197 198 199 200 201 202 203 204 205 206 207 208 209
    210 211 212 213 214 215 216, on right: 193 195 205 206 207 208
    209 210 211 212 215 216
initializer (160)
    on left: 217 218 219, on right: 99 220 221 222 223
initializer_list (161)
    on left: 220 221 222 223, on right: 19 20 217 218 222 223
designation (162)
    on left: 224, on right: 220 222
designator_list (163)
    on left: 225 226, on right: 224 226
designator (164)
    on left: 227 228, on right: 225 226
static_assert_declaration (165)
    on left: 229, on right: 86 132
statement (166)
    on left: 230 231 232 233 234 235, on right: 236 237 238 244 247
    248 249 250 251 252 253 254 255
labeled_statement (167)
    on left: 236 237 238, on right: 230
compound_statement (168)
    on left: 239 240, on right: 231 265 266
block_item_list (169)
    on left: 241 242, on right: 240 242
block_item (170)
    on left: 243 244, on right: 241 242
expression_statement (171)
    on left: 245 246, on right: 232 252 253 254 255
selection_statement (172)
    on left: 247 248 249, on right: 233
iteration_statement (173)
    on left: 250 251 252 253 254 255, on right: 234
jump_statement (174)
    on left: 256 257 258 259 260, on right: 235
translation_unit (175)
    on left: 261 262, on right: 0 262
external_declaration (176)
    on left: 263 264, on right: 261 262
function_definition (177)
    on left: 265 266, on right: 263
declaration_list (178)
    on left: 267 268, on right: 265 268


State 0

    0 $accept: . translation_unit $end

    TYPEDEF_NAME   shift, and go to state 1
    TYPEDEF        shift, and go to state 2
    EXTERN         shift, and go to state 3
    STATIC         shift, and go to state 4
    AUTO           shift, and go to state 5
    REGISTER       shift, and go to state 6
    INLINE         shift, and go to state 7
    CONST          shift, and go to state 8
    RESTRICT       shift, and go to state 9
    VOLATILE       shift, and go to state 10
    BOOL           shift, and go to state 11
    CHAR           shift, and go to state 12
    SHORT          shift, and go to state 13
    INT            shift, and go to state 14
    LONG           shift, and go to state 15
    SIGNED         shift, and go to state 16
    UNSIGNED       shift, and go to state 17
    FLOAT          shift, and go to state 18
    DOUBLE         shift, and go to state 19
    VOID           shift, and go to state 20
    COMPLEX        shift, and go to state 21
    IMAGINARY      shift, and go to state 22
    STRUCT         shift, and go to state 23
    UNION          shift, and go to state 24
    ENUM           shift, and go to state 25
    ALIGNAS        shift, and go to state 26
    ATOMIC         shift, and go to state 27
    NORETURN       shift, and go to state 28
    STATIC_ASSERT  shift, and go to state 29
    THREAD_LOCAL   shift, and go to state 30

    declaration                go to state 31
    declaration_specifiers     go to state 32
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41
    static_assert_declaration  go to state 42
    translation_unit           go to state 43
    external_declaration       go to state 44
    function_definition        go to state 45


State 1

  122 type_specifier: TYPEDEF_NAME .

    $default  reduce using rule 122 (type_specifier)


State 2

  101 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 101 (storage_class_specifier)


State 3

  102 storage_class_specifier: EXTERN .

    $default  reduce using rule 102 (storage_class_specifier)


State 4

  103 storage_class_specifier: STATIC .

    $default  reduce using rule 103 (storage_class_specifier)


State 5

  105 storage_class_specifier: AUTO .

    $default  reduce using rule 105 (storage_class_specifier)


State 6

  106 storage_class_specifier: REGISTER .

    $default  reduce using rule 106 (storage_class_specifier)


State 7

  156 function_specifier: INLINE .

    $default  reduce using rule 156 (function_specifier)


State 8

  152 type_qualifier: CONST .

    $default  reduce using rule 152 (type_qualifier)


State 9

  153 type_qualifier: RESTRICT .

    $default  reduce using rule 153 (type_qualifier)


State 10

  154 type_qualifier: VOLATILE .

    $default  reduce using rule 154 (type_qualifier)


State 11

  116 type_specifier: BOOL .

    $default  reduce using rule 116 (type_specifier)


State 12

  108 type_specifier: CHAR .

    $default  reduce using rule 108 (type_specifier)


State 13

  109 type_specifier: SHORT .

    $default  reduce using rule 109 (type_specifier)


State 14

  110 type_specifier: INT .

    $default  reduce using rule 110 (type_specifier)


State 15

  111 type_specifier: LONG .

    $default  reduce using rule 111 (type_specifier)


State 16

  114 type_specifier: SIGNED .

    $default  reduce using rule 114 (type_specifier)


State 17

  115 type_specifier: UNSIGNED .

    $default  reduce using rule 115 (type_specifier)


State 18

  112 type_specifier: FLOAT .

    $default  reduce using rule 112 (type_specifier)


State 19

  113 type_specifier: DOUBLE .

    $default  reduce using rule 113 (type_specifier)


State 20

  107 type_specifier: VOID .

    $default  reduce using rule 107 (type_specifier)


State 21

  117 type_specifier: COMPLEX .

    $default  reduce using rule 117 (type_specifier)


State 22

  118 type_specifier: IMAGINARY .

    $default  reduce using rule 118 (type_specifier)


State 23

  126 struct_or_union: STRUCT .

    $default  reduce using rule 126 (struct_or_union)


State 24

  127 struct_or_union: UNION .

    $default  reduce using rule 127 (struct_or_union)


State 25

  142 enum_specifier: ENUM . LBRACKET enumerator_list RBRACKET
  143               | ENUM . LBRACKET enumerator_list COMMA RBRACKET
  144               | ENUM . ID LBRACKET enumerator_list RBRACKET
  145               | ENUM . ID LBRACKET enumerator_list COMMA RBRACKET
  146               | ENUM . ID

    ID        shift, and go to state 46
    LBRACKET  shift, and go to state 47


State 26

  158 alignment_specifier: ALIGNAS . LPARENTHESIS type_name RPARENTHESIS
  159                    | ALIGNAS . LPARENTHESIS constant_expression RPARENTHESIS

    LPARENTHESIS  shift, and go to state 48


State 27

  151 atomic_type_specifier: ATOMIC . LPARENTHESIS type_name RPARENTHESIS
  155 type_qualifier: ATOMIC .

    LPARENTHESIS  shift, and go to state 49

    LPARENTHESIS  [reduce using rule 155 (type_qualifier)]
    $default      reduce using rule 155 (type_qualifier)


State 28

  157 function_specifier: NORETURN .

    $default  reduce using rule 157 (function_specifier)


State 29

  229 static_assert_declaration: STATIC_ASSERT . LPARENTHESIS constant_expression COMMA STRING RPARENTHESIS SEMICOLON

    LPARENTHESIS  shift, and go to state 50


State 30

  104 storage_class_specifier: THREAD_LOCAL .

    $default  reduce using rule 104 (storage_class_specifier)


State 31

  264 external_declaration: declaration .

    $default  reduce using rule 264 (external_declaration)


State 32

   84 declaration: declaration_specifiers . SEMICOLON
   85            | declaration_specifiers . init_declarator_list SEMICOLON
  265 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  266                    | declaration_specifiers . declarator compound_statement

    ID            shift, and go to state 51
    SEMICOLON     shift, and go to state 52
    LPARENTHESIS  shift, and go to state 53
    STAR          shift, and go to state 54

    init_declarator_list  go to state 55
    init_declarator       go to state 56
    declarator            go to state 57
    direct_declarator     go to state 58
    pointer               go to state 59


State 33

   87 declaration_specifiers: storage_class_specifier . declaration_specifiers
   88                       | storage_class_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 88 (declaration_specifiers)

    declaration_specifiers     go to state 60
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


State 34

   89 declaration_specifiers: type_specifier . declaration_specifiers
   90                       | type_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 90 (declaration_specifiers)

    declaration_specifiers     go to state 61
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


State 35

  120 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 120 (type_specifier)


State 36

  123 struct_or_union_specifier: struct_or_union . LBRACKET struct_declaration_list RBRACKET
  124                          | struct_or_union . ID LBRACKET struct_declaration_list RBRACKET
  125                          | struct_or_union . ID

    ID        shift, and go to state 62
    LBRACKET  shift, and go to state 63


State 37

  121 type_specifier: enum_specifier .

    $default  reduce using rule 121 (type_specifier)


State 38

  119 type_specifier: atomic_type_specifier .

    $default  reduce using rule 119 (type_specifier)


State 39

   91 declaration_specifiers: type_qualifier . declaration_specifiers
   92                       | type_qualifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 92 (declaration_specifiers)
